Fixed post update button is no visible in mobile device.

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -46,4 +46,8 @@ footer {
   .form-group {
     padding: 0px 15px;
   }
+  .form-action {
+    text-align: right;
+    margin-bottom: 1em;
+  }
 }
